--- a/git.html
+++ b/git.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>±ê ¿¬½À</h1>
-  <p><b>±ê</b>ÀÇ »ç¿ë ¹æ¹ý¿¡ ´ëÇØ ¾Ë¾Æº¾½Ã´Ù</p>
+  <p><b>±ê</b>checkthisout</p>
 </body>
 </html>https://www.zerocho.com/category/NodeJS
